# photo-server/src/main/java/org/stapledon/security/controller/AuthController.java
@@ -1,6 +1,8 @@
 package org.stapledon.security.controller;
 
+import io.swagger.annotations.*;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -13,11 +15,23 @@ import org.stapledon.security.service.AccountInfoService;
 @RestController
 @RequestMapping("/api/v1/auth")
 @RequiredArgsConstructor
+@Slf4j
 public class AuthController {
 
-    private final AccountInfoService userInfoFacade;
     private final AuthenticationService authenticationService;
 
+
+    /**
+     * Authenticates the user and returns an authentication token.
+     *
+     * @param authRequest the authentication request object containing the user credentials
+     * @return the authentication token
+     */
+    @ApiOperation("Authenticates the user and returns an authentication token")
+    @ApiResponses({
+        @ApiResponse(code = 200, message = "Successfully authenticated and obtained token"),
+        @ApiResponse(code = 401, message = "Unauthorized")
+    })
     @PostMapping("/authenticate")
     public String authenticateAndGetToken(@RequestBody AuthRequest authRequest) {
         return authenticationService.authenticate(authRequest);
